--- a/src/app/main-page/portfolio/project/project.component.scss
+++ b/src/app/main-page/portfolio/project/project.component.scss
@@ -174,7 +174,6 @@
 }
 
 #p-switch {
-  margin-top: 16px;
   @include dFlex($jc: space-between);
 
   button,
@@ -207,7 +206,7 @@
 @media (max-width: 800px) {
   #project-showcase {
     flex-direction: column;
-    gap: 32px;
+    gap: 24px;
     padding: 0 clamp(0rem, 40vw - 24rem, 8rem);
   }
 
@@ -221,6 +220,13 @@
 
   #p-details {
     @include textPadding();
+    order: 1;
+  }
+
+  #p-switch {
+    order: 0;
+    margin-bottom: 0;
+    margin-bottom: 24px;
   }
 
   #p-links {
